# Stegnal

./: .gitignore  Build_demo_model_exe.bat  CONTRIBUTING.md  LEGACY_DOCUMENTS.md  LICENSE.md  Project Notes.txt  README.md  RUN_NOTES.md  Umbra_Terminal.spec  _bootstrap_env.bat  app.py  build.spec  launch_model_viewer.bat  launch_stegnal_ui.bat  launch_stegnal_ui.ps1  launch_terminal.bat  launch_umbra_ui.bat  launch_umbra_ui.ps1  pyproject.toml  ruff.toml  validate_generalization.py  validate_security.py
.github/workflows/: ci.yml
scripts/: generate_readme_images.py
src/stegnal/: __init__.py  __main__.py  audio_mixer.py  capture.py  checkpoint.py  cli.py  codec.py  config.py  demo_packager.py  difficulty.py  encoding.py  evolution.py  gpu_runtime.py  logging_utils.py  metrics.py  neural.py  pipeline.py  predictor.py  reconstruction.py  run_helpers.py  runs.py  testing.py  ui.py  visualization.py
src/stegnal/tools/: __init__.py  model_viewer.py
src/umbra/: __init__.py  __main__.py  adversarial.py  audio.py  audio_mixer.py  capture.py  chart_export.py  checkpoint.py  cli.py  codec.py  config.py  decoding.py  demo_packager.py  difficulty.py  encoding.py  evolution.py  gpu_runtime.py  gpu_runtime.py.20251101_031213.bak  gpu_runtime.py.20251101_031637.bak  gpu_runtime.py.20251101_031953.bak  gpu_runtime.py.20251101_032406.bak  gpu_runtime.py.20251101_032556.bak  gpu_runtime.py.20251101_033209.bak  gpu_runtime.py.20251101_033540.bak  gpu_runtime.py.20251101_033857.bak  gpu_runtime.py.20251101_034125.bak  gpu_runtime.py.20251101_034426.bak  gpu_runtime.py.20251101_035808.bak  gpu_runtime.py.20251101_040130.bak  gpu_runtime.py.20251101_040549.bak  gpu_runtime.py.20251101_041056.bak  gpu_runtime.py.20251101_044452.bak  gpu_runtime.py.20251101_044951.bak  logging_utils.py  metrics.py  neural.py  payload.py  pipeline.py  predictor.py  progress.py  (+8 more)
src/umbra/tools/: __init__.py  model_viewer.py
tests/: conftest.py  test_adversarial.py  test_capture.py  test_chart_export.py  test_checkpoint.py  test_cli.py  test_codec.py  test_compute_split.py  test_config.py  test_decoding.py  test_demo_packager.py  test_difficulty.py  test_encoding.py  test_evolution.py  test_evolution_manager.py  test_gpu_runtime.py  test_logging_utils.py  test_metrics.py  test_metrics_extra.py  test_model_viewer.py  test_neural_reward.py  test_payload.py  test_pinterest_dataset.py  test_pipeline.py  test_predictor.py  test_progress.py  test_reconstruction.py  test_run_helpers.py  test_run_pipeline.py  test_runs.py  test_smoke.py  test_sound.py  test_ui_state.py  test_visualization.py
tools/: add_gpu_error_class_precise.ps1  add_pinned_array_stubs_precise.ps1  fix_function_global_order.ps1  hardreset_gpu_stubs.ps1  patch_gpu_cupy_stub.ps1  patch_gpu_error_stub.ps1  patch_gpu_oome_stub.ps1  patch_gpu_pinned_stubs.ps1  patch_gpu_pinned_stubs_v2.ps1  patch_nvrtc_globals.ps1  patch_nvrtc_globals_min.ps1  patch_nvrtc_globals_precise.ps1  patch_nvrtc_globals_v2.ps1  patch_nvrtc_globals_v3.ps1  rebuild_gpu_header_clean.ps1  repair_cupy_indent_v2.ps1  repair_import_stubs.ps1  reset_gpu_header.ps1  sanitize_cupy_header.ps1
