[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stegnal"
version = "0.2.0"
description = "Real acoustic (ultrasonic/high-freq) image/text to audio transmission with AI post-channel prediction, secure key derivation from AI recon + physical channel fingerprint, over-air testing and adaptation."
readme = "README.md"
authors = [{ name = "Stegnal Team" }]
license = { text = "PolyForm-Noncommercial-1.0.0" }
requires-python = ">=3.9"
keywords = [
    "steganography",
    "audio-steganography",
    "ultrasonic",
    "acoustic-communication",
    "image-to-audio",
    "covert-channel",
    "signal-processing",
    "channel-fingerprinting",
    "noncommercial",
    "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "scikit-image>=0.22",
    "scipy>=1.10",
    "pandas>=1.5",
    "pyarrow>=10.0",
    "vl-convert-python>=1.8",
]

[project.optional-dependencies]
# Desktop UIs: the Tkinter explorer (`stegnal ui`) needs sounddevice via
# stegnal.audio_mixer; the standalone app.py "Terminal" needs customtkinter.
ui = [
    "customtkinter>=5.2",
    "sounddevice>=0.4",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-Pillow",
]
gpu = [
    "cupy-cuda12x",
]

[project.scripts]
stegnal = "stegnal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stegnal"]

[tool.hatch.build.targets.sdist]
include = ["src/stegnal", "README.md", "pyproject.toml"]
